# MiniC

./: .gitignore  .merlin  Makefile  README.md  ast_types.ml  dune  error_messages.ml  minic.ml  minicAstTypes.ml  minicInterpreterTypes.ml  minicMemoryPrinter.ml  minic_error.c  minic_example.c  minic_syntax_error.c  minicinterpreter.ml  miniclexer.mll  minicparser.messages  minicparser.mly  minicprinter.ml  minictypechecker.ml  printer.ml
tests/: minic_example.c  minic_pointer_error.c
