(ocamllex miniclexer)
(menhir
  (flags --table -v)
  (modules minicparser))

(rule
  (targets error_messages.ml)
  (deps minicparser.messages minicparser.mly)
  (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(executable
  (name minic)
  (libraries menhirLib)
  (modes byte exe))
